2017-02-03
	- For binary files, attempt some initial naive identification of pointers
	  within the loaded binary data, and adding automatic symbols for them.
2016-10-17
	- Detect library calls.  For exec open library calls, rename the library name
	  symbol, and change it's data type to ASCII.  This adds some initial support 
	  for processing all m68k Amiga library calls.
2016-10-17
	- Remove hard-coded m68k pc offset references, used to get the address of the
	  instruction data.
2016-10-16
	- Add typing/mypy support, so that static typing checks can be run over most
	  of the source code.
2016-10-10
	- Remove hard-coded m68k references from core disassembly logic.
2016-10-06
	- In data blocks, a value that is known to be a relocated address where
	  the address the value is located in had that value relocated, now gets
	  displayed as a symbol.
	- Search for text is now implemented.  It basically does a case-insensitive
	  search for that text in either the label, instruction or operand text.
	  The prolonged action system is used to prevent locking up the UI, and to
	  both show progress and to allow the user to cancel.
	- Symbols on a line within a data block can now be followed.